; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cart_hw/extr_sms_cart.c_write_mapper_codies.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/cart_hw/extr_sms_cart.c_write_mapper_codies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@z80_writemap = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8)* @write_mapper_codies to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_mapper_codies(i32 %0, i8 zeroext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  store i32 %0, i32* %3, align 4
  store i8 %1, i8* %4, align 1
  %5 = load i32, i32* %3, align 4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i8, i8* %4, align 1
  %9 = call i32 @mapper_16k_w(i32 1, i8 zeroext %8)
  br label %34

10:                                               ; preds = %2
  %11 = load i32, i32* %3, align 4
  %12 = icmp eq i32 %11, 16384
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i8, i8* %4, align 1
  %15 = call i32 @mapper_16k_w(i32 2, i8 zeroext %14)
  br label %34

16:                                               ; preds = %10
  %17 = load i32, i32* %3, align 4
  %18 = icmp eq i32 %17, 32768
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i8, i8* %4, align 1
  %21 = call i32 @mapper_16k_w(i32 3, i8 zeroext %20)
  br label %34

22:                                               ; preds = %16
  %23 = load i8, i8* %4, align 1
  %24 = load i8**, i8*** @z80_writemap, align 8
  %25 = load i32, i32* %3, align 4
  %26 = lshr i32 %25, 10
  %27 = zext i32 %26 to i64
  %28 = getelementptr inbounds i8*, i8** %24, i64 %27
  %29 = load i8*, i8** %28, align 8
  %30 = load i32, i32* %3, align 4
  %31 = and i32 %30, 1023
  %32 = zext i32 %31 to i64
  %33 = getelementptr inbounds i8, i8* %29, i64 %32
  store i8 %23, i8* %33, align 1
  br label %34

34:                                               ; preds = %22, %19, %13, %7
  ret void
}

declare dso_local i32 @mapper_16k_w(i32, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
